# proofservice-weighing-scale

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  Manifest  README.md  UPGRADE.md  main.cpp  proofservice-weighing-scale.pro  proofservice-weighing-scale_global.h  weighingscalehandler.cpp  weighingscalehandler.h  weighingscalerestserver.cpp  weighingscalerestserver.h
cmake/: Findlibusb.cmake
